Add basic adapter test.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsup-node",
     "dev": "tsup-node --watch",
-    "test": "mocha",
+    "test": "vitest",
     "lint": "biome lint",
     "format": "biome format",
     "check": "biome check",
@@ -33,22 +33,21 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@sveltejs/kit": "^2.15.0",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^22.10.2",
+    "@sveltejs/kit": "^2.15.1",
+    "@types/node": "^22.10.3",
     "@types/set-cookie-parser": "^2.4.10",
     "esbuild": "^0.24.2",
     "escape-string-regexp": "^5.0.0",
-    "mocha": "^11.0.1",
-    "npm-check-updates": "^17.1.12",
+    "npm-check-updates": "^17.1.13",
     "terser": "^5.37.0",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   },
   "dependencies": {
     "@azure/functions": "^4.6.0",
     "set-cookie-parser": "^2.7.1"
   },
-  "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
+  "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
 }
