--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   "pnpm": {
     "overrides": {
       "@sveltejs/vite-plugin-svelte": "^5.0.3",
-      "vite": "^6.0.6"
+      "vite": "^6.0.6",
+      "cookie": "0.7.0"
     }
   },
   "dependencies": {
