Fix tests on publish

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "tsup-node",
     "dev": "tsup-node --watch",
     "test": "vitest",
+    "test:ci": "vitest run",
     "lint": "biome lint",
     "format": "biome format",
     "check": "biome check",
     "ci": "biome ci",
     "ci:fix": "biome check --fix --diagnostic-level=error",
     "updates": "npm-check-updates",
-    "prepublishOnly": "run-p build test ci",
+    "prepublishOnly": "run-s build test:ci ci",
     "postpublish": "pnpm version --no-git-tag-version patch"
   },
   "keywords": ["svelte", "azure", "azure functions", "adapter"],
