--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
     - run: pnpm i --frozen-lockfile
-    - run: pnpm run build --if-present
-    - run: pnpm test
+    - run: pnpm run --if-present build
+    - run: pnpm run test
