Include files in package

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@shellicar/svelte-adapter-azure-functions",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Svelt adapter for Azure Function Apps",
-  "files": ["dist"],
+  "files": ["dist","files"],
   "type": "module",
   "scripts": {
     "build": "tsup-node",
