--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -22,6 +22,6 @@ jobs:
       - run: pnpm run --if-present build
       - run: pnpm run test
       - run: pnpm run ci
-      - run: pnpm publish --ignore-scripts
+      - run: pnpm publish --ignore-scripts --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
